tests/stacks/ibm/components/metadata/test_data/expected/apps_v1_deployment_metadata-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: metadata-ui
    app.kubernetes.io/component: metadata
    app.kubernetes.io/name: metadata
    kustomize.component: metadata
  name: metadata-ui
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: metadata-ui
      app.kubernetes.io/component: metadata
      app.kubernetes.io/name: metadata
      kustomize.component: metadata
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: metadata-ui
        app.kubernetes.io/component: metadata
        app.kubernetes.io/name: metadata
        kustomize.component: metadata
      name: ui
    spec:
      containers:
      - image: gcr.io/kubeflow-images-public/metadata-frontend:v0.1.8
        imagePullPolicy: IfNotPresent
        name: metadata-ui
        ports:
        - containerPort: 3000
      serviceAccountName: metadata-ui
