tests/stacks/ibm/components/metadata/test_data/expected/networking.istio.io_v1alpha3_virtualservice_metadata-grpc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/component: metadata
    app.kubernetes.io/name: metadata
    kustomize.component: metadata
  name: metadata-grpc
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /ml_metadata
    rewrite:
      uri: /ml_metadata
    route:
    - destination:
        host: metadata-envoy-service.kubeflow.svc.cluster.local
        port:
          number: 9090
    timeout: 300s
